# judge

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  flake.nix  skills.md
src/: lib.rs
tests/: scaffold.rs
