[package]
name         = "judge"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.89"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/judge"
description  = "Shared adapter mechanics for model-backed judgment edges."
publish      = false

[lib]
name = "judge"
path = "src/lib.rs"

[features]
default = []
live-provider = ["dep:reqwest", "dep:serde"]

[dependencies]
reqwest   = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"], optional = true }
serde     = { version = "1", features = ["derive"], optional = true }
tempfile = "3"
thiserror = "2"

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
